# tauri-plugin-medialibrary

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  package.json  pnpm-lock.yaml
.changes/: config.json  crates_io_publish.md  crates_publish.md  custom_protocol_handler.md  delete_command.md  dependency_update.md  get_image.md  meta_data.md  metadata.md  metadata_modifications.md  modified_pipeline.md  package_update.md  package_upgrade.md  return_types_and_doc.md  sortdirection.md  walkdir.md  windows_implementation.md
.github/workflows/: build.yml  cleanup.yml  covector-version-or-publish.yml
android/: .gitignore  build.gradle.kts
android/src/androidTest/java/: ExampleInstrumentedTest.kt
android/src/main/: AndroidManifest.xml
android/src/main/java/: Args.kt  MediaLibrary.kt  MediaLibraryPlugin.kt
android/src/test/java/: ExampleUnitTest.kt
guest-js/: index.ts
permissions/: global-scope.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: delete_image.toml  get_available_sources.toml  get_image  .toml  get_image.toml  get_images.toml
permissions/schemas/: schema.json
src/: amt_thumbnail_provider.rs  commands.rs  desktop.rs  directory_reader.rs  error.rs  image_protocol_handler.rs  lib.rs  mobile.rs  models.rs  path_reader.rs  protocol_handler.rs  scope.rs  thumbcache_thumbnail_provider.rs  thumbnail_protocol_handler.rs  thumbnail_provider.rs  uri.rs  walkdir_reader.rs  windows_thumbnail_provider.rs  xdg_directory_reader.rs  xdg_thumbnail_provider.rs
