[package]
name = "tauri-plugin-medialibrary"
version = "0.1.0"
authors = ["Dirk Lehmeier"]
description = ""
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-medialibrary"

[dependencies]
tauri = { version = "2.7.0" }
thiserror = "2"
log = "0.4.26"
serde = "1.0.219"
serde_json = "1.0.140"
xdg-user = "0.2.1"
allmytoes = "0.4.0"
base64 = "0.22.1"
fluent-uri = "0.1.4"

[build-dependencies]
schemars = "0.8.22"
tauri-plugin = { version = "2.3.0", features = ["build"] }
