[package]
name = "tauri-plugin-medialibrary"
version = "0.1.0"
authors = ["Dirk Lehmeier"]
description = ""
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-medialibrary"

[dependencies]
tauri = { version = "2.8.5" }
thiserror = "2"
log = "0.4.26"
serde = "1.0.219"
serde_json = "1.0.140"
base64 = "0.22.1"
fluent-uri = "0.1.4"
chrono = "0.4.41"
allmytoes = { version = "0.4.0", optional = true }
xdg-user = { version = "0.2.1", optional = true }
thumbcache = { version = "0.4.0", optional = true }


[build-dependencies]
schemars = "0.8.22"
tauri-plugin = { version = "2.4.0", features = ["build"] }

[features]
default = []
xdg = ["allmytoes", "xdg-user"]
thumb_cache = ["thumbcache"]